set on click item trong recycle view at home page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.FlowerShop"
         tools:targetApi="31">
         <activity
+            android:name=".Detail_Flower_Activity"
+            android:exported="false" />
+        <activity
             android:name=".AddToCart"
             android:exported="false">
             <meta-data
